<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@android:id/android:list">
    
<TextView  
android:id="@+id/txtCourseId"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/courseId" />

<EditText
    android:id="@+id/editCourseId" 
    android:layout_height="wrap_content"
    android:layout_width="fill_parent" 
    android:inputType="number"
    android:hint="@string/courseHint"/>
        
<Button 
    android:text="@string/courseInfo" 
    android:id="@+id/btnGetCourse" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" />       


<Button 
    android:text="@string/deleteCourse" 
    android:id="@+id/btnDelete" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" />
 
</LinearLayout>