<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:contentDescription="@string/userGuide"
            android:id="@+id/infoCDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/info" 
             android:background="@null"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/courseName"
            android:layout_width="258dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/courseName"
            android:textSize="24sp" />

        <ImageButton
            android:contentDescription="@string/favButton"
            android:id="@+id/favorite_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#00ffffff"
            android:src="@android:drawable/btn_star" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonTagCourseLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/storeLocation" />

    <TextView
        android:id="@+id/courseShotTotal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/cTotal"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/coursePar3Total"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/cPar3"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/coursePar4Total"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/cPar4"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/coursePar5Total"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/cPar5"
            android:textSize="24sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/btnPlayCourse"
            android:layout_width="200dp"
            android:layout_height="150sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/play"
            android:textSize="60sp"
            android:textColor="#fff" />

    </RelativeLayout>

</LinearLayout>