<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:contentDescription="@string/userGuide"
            android:id="@+id/infoCSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/info" 
             android:background="@null"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtNoPlayers"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/numPLayers"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnNoPlayers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAppSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/appSettings" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableRow
                android:id="@+id/tblSetHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtTableHeadID"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/cSettingID" />

                <TextView
                    android:id="@+id/txtTableHeadName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/cSettingName" />
                <TextView
                    android:id="@+id/txtTableHeadContact"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/cSettingContact" />
            </TableRow>

            <TableRow
                android:id="@+id/tblSetRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtUserID"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/a1" />

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/user" />
                <TextView
                    android:id="@+id/txtUserContact"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/email" />
            </TableRow>

            <TableRow
                android:id="@+id/tblSetRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txtGuestName1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/a2" />

                <TextView
                    android:id="@+id/txtGuestID1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/guest1" />
                <EditText android:id="@+id/edtGuestContact1"
                    android:inputType="textEmailAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textSize="14sp"
                    android:hint="@string/guestHint" />
            </TableRow>

            <TableRow
                android:id="@+id/tblSetRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:visibility="gone">

                <TextView
                    android:id="@+id/txtGuestID2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/a3" />

                <TextView
                    android:id="@+id/txtGuestName2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/guest2" />
                <EditText android:id="@+id/edtGuestContact2"
                    android:inputType="textEmailAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textSize="14sp"
                    android:hint="@string/guestHint" />
            </TableRow>

            <TableRow
                android:id="@+id/tblSetRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txtGuestID3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/a4" />

                <TextView
                    android:id="@+id/txtGuestName3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/guest3" />
                <EditText android:id="@+id/edtGuestContact3"
                    android:inputType="textEmailAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textSize="14sp"
                    android:hint="@string/guestHint" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/btnStartNewGame"
            android:layout_width="200dp"
            android:layout_height="150sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/round_button"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/play"
            android:textColor="#fff"
            android:textSize="60sp" />
    </RelativeLayout>

</LinearLayout>