<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/buttonBackHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textViewHintsNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a1"
            android:layout_margin="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonNextHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewHintHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hints" 
        android:textSize="19sp"
        android:layout_gravity="center_horizontal"/>
<TextView
        android:id="@+id/textViewHintBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hints" 
        android:layout_gravity="center_horizontal"/>

</LinearLayout>