<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/popup_element"
    android:background="#bb006633" >


    <TextView
        android:id="@+id/txtTrackDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/trackDistance"
        android:textSize="40sp"
        android:textColor="#000000"  />

    <Button
        android:id="@+id/btnTrackStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtTrackDistance"
        android:layout_marginBottom="61dp"
        android:gravity="bottom"
        android:text="@string/stop"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnCancelTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnTrackStop"
        android:layout_alignLeft="@+id/txtTrackDistance"
        android:text="@string/cancel" 
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btnTrackStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/start"
        android:textSize="30sp" />

</RelativeLayout>